--- a/default/data/ui/views/detection_insight.xml
+++ b/default/data/ui/views/detection_insight.xml
@@ -1,18 +1,36 @@
 <form script="prism_setup.js,prism.js,tabs.js,detection_insight.js" stylesheet="prism.css,tabs.css,detection_insight.css" version="1.1" theme="dark">
   <label>Security Detections Insights</label>
   <description>Provides insight into the security detections (Correlation Rules) in your Splunk Enterprise Security environment.</description>
-  <!-- Modal -->
-  <search id="baseDetectionsSearch">
+  <!-- Base search to determine if the lookup used in the default base search has been populated or not -->
+  <search id="checkBaseLookupIsPopulated">
     <query>
-      | rest splunk_server=local count=0 /services/saved/searches 
+      | rest splunk_server=local /services/admin/lookup-table-files/all_saved_searches.csv | fields title
     </query>
   </search>
+  <!-- Base search for saved searches, which include ES correlation searches -->
+  <search id="baseDetectionsSearch">
+    <!-- Use the REST based search below if you prefer realtime data over performance. -->
+    <!-- | rest splunk_server=local count=0 /services/saved/searches -->
+    <query>
+      | inputlookup all_saved_searches.csv
+    </query>
+  </search>
+  <!-- Base search to determine the current deployment type we're running on, on-premises or Splunk Cloud.  Splunk Cloud has an instance_type field -->
   <search id="baseSplunkInstanceType">
     <query>
-      | rest splunk_server=local count=1 /services/server/info 
-      | fields instance_type
-      | eval instance_type=coalesce(instance_type, "on-premises")
+      | rest splunk_server=local count=1 /services/server/info
+      | where isnull(instance_type)
     </query>
+    <finalized>
+      <condition match=" 'job.resultCount' != 0">
+        <set token="isSplunkEnterprise">true</set>
+        <unset token="isSplunkCloud"></unset>
+      </condition>
+      <condition>
+        <set token="isSplunkCloud">true</set>
+        <unset token="isSplunkEnterprise"></unset>
+      </condition>
+    </finalized>
   </search>
   <fieldset submitButton="false" autoRun="true"></fieldset>
   <row id="tabs">
@@ -25,6 +43,9 @@
              font-weight: normal;
           }
         </style>
+        <!-- Modals -->
+        <div id="modalInitialSetup"/>
+        <!-- Tabs -->
         <ul id="tabs" class="nav nav-tabs">
           <li class="active">
             <a href="#" class="toggle-tab" data-toggle="tab" data-elements="tab_overview_header,tab_overview,tab_overview_2,tab_overview_3" data-token="tab_overview_token">Overview</a>
@@ -175,6 +196,7 @@ $tab_overview_token$
         <option name="sunburst_viz.sunburst_viz.breadcrumbs">hide</option>
         <option name="sunburst_viz.sunburst_viz.color">interpolateCubehelixDefault</option>
         <option name="sunburst_viz.sunburst_viz.colormode">parent</option>
+        <option name="sunburst_viz.sunburst_viz.coloroverride">&lt;none&gt;,#3c444d</option>
         <option name="sunburst_viz.sunburst_viz.labelcolor">#ffffff</option>
         <option name="sunburst_viz.sunburst_viz.labels">show</option>
         <option name="sunburst_viz.sunburst_viz.labelsize">90</option>
@@ -187,6 +209,13 @@ $tab_overview_token$
   <row id="tab_detections">
     <panel>
       <title>Security Detections</title>
+      <input type="text" token="tokName" searchWhenChanged="true">
+        <label>Rule Name</label>
+        <default>*</default>
+        <prefix>*</prefix>
+        <suffix>*</suffix>
+        <initialValue>*</initialValue>
+      </input>
       <input type="dropdown" token="tokStatus" searchWhenChanged="true">
         <label>Status</label>
         <choice value="1=1">All</choice>
@@ -290,6 +319,7 @@ $tab_overview_token$
         <title>Note: Expand any of the detections for more information.</title>
         <search base="baseDetectionsSearch">
           <query>$tab_detections_token$
+| search title="$tokName$"
 | eval isEnabled=if(disabled == 0, "True", "False") 
 | where isnotnull('action.correlationsearch.enabled') AND $tokStatus$
 | fillnull value="&lt;none&gt;" action.notable.param.security_domain 
@@ -306,7 +336,7 @@ $tab_overview_token$
     | rename title AS macro_name_normalized] 
 | eval expanded_search = if(isnotnull(definition), replace(search, "\`" + macro_name + "\`", definition), search)
 | eval command_type = case(match(expanded_search, "(?i)^\s*\|\s*from datamodel"), "datamodel", match(expanded_search, "(?i)^\s*\|\s*tstats"), "tstats", match(expanded_search, "(?i)^\s*\|\s*(from |)inputlookup"), "lookup", isnotnull(definition) AND match(expanded_search, "(?i)(eventtype\s*=\s*|source\s*=\s*|sourcetype\s*=\s*|index\s*=\s*).*?\|"), "macro (raw data search)", match(expanded_search, "^\s*(\||)\s*\`"), "macro", match(expanded_search, "(?i)^\s*\|\s*rest"), "rest", match(expanded_search, "(?i)(eventtype\s*=\s*|source\s*=\s*|sourcetype\s*=\s*|index\s*=\s*|tag\s*=\s*|tag\s+in\s+).*?\|"), "raw data search", true(), "other")
-| eval "Provided By" = if('eai:acl.app'=="DA-ESS-ContentUpdate", "ESCU", "ES") 
+| eval "Provided By" = case('eai:acl.app'=="DA-ESS-ContentUpdate", "ESCU", match('eai:acl.app', "DA-ESS-.*|SA-.*Protection|SA-IdentityManagement|SA-ThreatIntelligence|SplunkEnterpriseSecurity"), "ES", true(), "Other") 
 | rename id as _id, eai:acl.app as Application, title as Name, action.notable.param.security_domain as Domain, actions as "Adaptive Response Actions", isEnabled as "Enabled?"
 | eval Domain = lower(Domain) 
 | join Name type=outer 
@@ -326,7 +356,7 @@ $tab_overview_token$
           <colorPalette type="map">{"True":#1E6F52,"False":#65778A}</colorPalette>
         </format>
         <format type="color" field="Provided By">
-          <colorPalette type="map">{"ES":#3C444D,"ESCU":#2EA39B}</colorPalette>
+          <colorPalette type="map">{"ES":#3C444D,"ESCU":#2EA39B,"Other":#65778A}</colorPalette>
         </format>
         <format type="color" field="Domain">
           <colorPalette type="map">{"access":#ABBFDC,"audit":#A3E5CD,"endpoint":#98F0EF,"identity":#169C9B,"network":#3E6297,"threat":#004153,"&lt;none&gt;":#65778A}</colorPalette>
@@ -341,9 +371,9 @@ $tab_overview_token$
     </panel>
   </row>
   <row id="tab_detections_2">
-    <panel>
+    <panel depends="$isSplunkEnterprise$">
       <title>Security Detection Changes</title>
-      <input type="time" token="tokChangesTime" searchWhenChanged="true">
+      <input type="time" token="tokChangesTimeOP" searchWhenChanged="true">
         <label>Time Window</label>
         <default>
           <earliest>-24h@h</earliest>
@@ -363,22 +393,74 @@ $tab_overview_token$
         <valueSuffix>"</valueSuffix>
         <delimiter>, </delimiter>
       </input>
+      <input id="ruleFilterInputOP" type="text" token="tokRuleFilterOP" searchWhenChanged="true">
+        <label>Rule Name</label>
+        <prefix>*</prefix>
+        <suffix>*</suffix>
+        <default>*</default>
+        <initialValue>*</initialValue>
+      </input>
       <table>
+        <title>Note: Detections enabled/disabled only do not additionally show as modifications. Uses the _configtracker index since this is an on-premises deployment.</title>
         <search>
           <query>index=_configtracker component=ConfigChange data.path=*savedsearches.conf data.changes{}.properties{}.new_value=* $tab_detections_token$
-| where isnull(mvcount(mvfilter(len('data.changes{}.properties{}.old_value') &gt; 0)))
+| rex field=data.path "apps\/(?&lt;app&gt;.*?)\/"
+| where isnull(mvcount(mvfilter(len('data.changes{}.properties{}.old_value') &gt; 0))) 
+| search app IN("DA-ESS-*","SplunkEnterpriseSecuritySuite") AND data.changes{}.stanza = "$tokRuleFilterOP$"
+| eval provided_by = case(app=="DA-ESS-ContentUpdate", "ESCU", match(app, "DA-ESS-.*|SA-.*Protection|SA-IdentityManagement|SA-ThreatIntelligence|SplunkEnterpriseSecurity"), "ES", true(), "Other") 
 | eval Action = case('data.changes{}.properties{}.new_value'="0" AND mvindex('data.changes{}.properties{}.name',0)="disabled", "Enabled", 'data.changes{}.properties{}.new_value'="1" AND mvindex('data.changes{}.properties{}.name',0)="disabled", "Disabled", true(), "Modified")
 | search Action IN $tokChangeActions$
-| rename _time as "Modification Time", data.changes{}.stanza as Title, data.changes{}.properties{}.name as Properties, data.changes{}.properties{}.new_value as Values
-| table "Modification Time", Title, Action, Properties, Values
+| rename _time as "Modification Time", app as "Application", provided_by as "Provided by", data.changes{}.stanza as Title, data.changes{}.properties{}.name as Properties, data.changes{}.properties{}.new_value as Values
+| table "Modification Time", "Provided by", Application, Action, Title, Properties, Values
 | convert ctime("Modification Time")</query>
-          <earliest>$tokChangesTime.earliest$</earliest>
-          <latest>$tokChangesTime.latest$</latest>
+          <earliest>$tokChangesTimeOP.earliest$</earliest>
+          <latest>$tokChangesTimeOP.latest$</latest>
         </search>
         <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
         <format type="color" field="Action">
           <colorPalette type="map">{"Enabled":#1E6F52,"Disabled":#3C444D,"Modified":#CBA700}</colorPalette>
+        </format>
+        <format type="color" field="Provided by">
+          <colorPalette type="map">{"ES":#3C444D,"ESCU":#2EA39B,"Other":#65778A}</colorPalette>
+        </format>
+      </table>
+    </panel>
+    <panel depends="$isSplunkCloud$">
+      <title>Security Detection Changes</title>
+      <input type="time" token="tokChangesTimeCloud" searchWhenChanged="true">
+        <label>Time Window</label>
+        <default>
+          <earliest>-24h@h</earliest>
+          <latest>now</latest>
+        </default>
+      </input>
+      <input type="text" token="tokRuleFilterCloud" searchWhenChanged="true">
+        <label>Rule Name</label>
+        <prefix>*</prefix>
+        <suffix>*</suffix>
+        <default>*</default>
+        <initialValue>*</initialValue>
+      </input>
+      <table>
+        <title>Note: Changes listed here do not provide details as to what was changed as that feature is not available yet for Splunk Cloud deployments.</title>
+        <search>
+          <query>index=_internal sourcetype=splunkd_ui_access method=POST uri="/*/splunkd/__raw/servicesNS/*/*/saved/searches/*" uri!="*/dispatch" 
+| rex field=uri "nobody\/(?&lt;app&gt;.*?)\/saved\/searches"
+| search app IN("DA-ESS-*","SplunkEnterpriseSecuritySuite")
+| eval provided_by = case(app=="DA-ESS-ContentUpdate", "ESCU", match(app, "DA-ESS-.*|SA-.*Protection|SA-IdentityManagement|SA-ThreatIntelligence|SplunkEnterpriseSecurity"), "ES", true(), "Other") 
+| eval rule_name = urldecode(file)
+| search rule_name = "$tokRuleFilterCloud$"
+| table _time, provided_by, app, user, clientip, rule_name
+| rename _time as "Modification Time", provided_by as "Provided by", app as "Application", user as "Modified By", clientip as "Client IP", rule_name as "Detection Name"
+| convert ctime("Modification Time")</query>
+          <earliest>$tokChangesTimeCloud.earliest$</earliest>
+          <latest>$tokChangesTimeCloud.latest$</latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="refresh.display">progressbar</option>
+        <format type="color" field="Provided by">
+          <colorPalette type="map">{"ES":#3C444D,"ESCU":#2EA39B,"Other":#65778A}</colorPalette>
         </format>
       </table>
     </panel>
@@ -454,7 +536,7 @@ $tab_overview_token$
     </panel>
   </row>
   <row id="tab_mitre_3">
-    <panel>
+    <panel depends="$isSplunkEnterprise$">
       <title>Security Posture Changes</title>
       <viz type="mitre_attck_heatmap.mitre_attck_heatmap">
         <title>This shows changes that were made to your security detection that might impact your security posture in the selected time frame.</title>
@@ -481,7 +563,41 @@ $tab_overview_token$
         <option name="drilldown">none</option>
         <option name="mitre_attck_heatmap.mitre_attck_heatmap.endVal">1</option>
         <option name="mitre_attck_heatmap.mitre_attck_heatmap.hideNull">yes</option>
-        <option name="mitre_attck_heatmap.mitre_attck_heatmap.legendTitle">Changes (0 = Disabled, 1 = Activated)</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.legendTitle">Changes (0 = Disabled, 1 = Enabled)</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.midColor">#22908D</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.sortOrder">desc</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.theme">dark</option>
+        <option name="refresh.display">progressbar</option>
+      </viz>
+    </panel>
+    <panel depends="$isSplunkCloud$">
+      <title>Security Posture Changes</title>
+      <viz type="mitre_attck_heatmap.mitre_attck_heatmap">
+        <title>This shows changes that were made to your security detection that might impact your security posture in the selected time frame.  Only shows the last change to individual rules as the _configtracker index is not yet available on Splunk Cloud.</title>
+        <search>
+          <query>index=_internal sourcetype=splunkd_ui_access method=POST uri="/*/splunkd/__raw/servicesNS/*/*/saved/searches/*" uri!="*/dispatch" 
+| rex field=uri "nobody\/(?&lt;app&gt;.*?)\/saved\/searches"
+| search app IN("SA-*","DA-ESS-*","SplunkEnterpriseSecuritySuite")
+| eval Title = urldecode(file)
+| join Title 
+    [| rest splunk_server=local count=0 /servicesNS/-/SplunkEnterpriseSecuritySuite/saved/searches 
+    | search action.correlationsearch.annotations=* 
+    | spath input=action.correlationsearch.annotations 
+    | fields title mitre_attack{}, disabled
+    | rename title as Title, mitre_attack{} as Technique 
+    | mvexpand Technique 
+    | eval Technique = replace(Technique, "([Tt]\d+)(\.\d+|)", "\1") ]
+| eval count=if(disabled == 1, 0, 1) 
+| eval Title=if(disabled == 1, Title + " (Removed)", Title + " (Added)") 
+| stats count as notneeded by Technique count Title
+| table Technique count Title</query>
+          <earliest>$tokNotablesTime.earliest$</earliest>
+          <latest>$tokNotablesTime.latest$</latest>
+        </search>
+        <option name="drilldown">none</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.endVal">1</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.hideNull">yes</option>
+        <option name="mitre_attck_heatmap.mitre_attck_heatmap.legendTitle">Changes (0 = Disabled, 1 = Enabled)</option>
         <option name="mitre_attck_heatmap.mitre_attck_heatmap.midColor">#22908D</option>
         <option name="mitre_attck_heatmap.mitre_attck_heatmap.sortOrder">desc</option>
         <option name="mitre_attck_heatmap.mitre_attck_heatmap.theme">dark</option>
@@ -605,6 +721,14 @@ $tab_overview_token$
     <panel>
       <title>Scheduled Searches Distribution</title>
       <chart>
+        <search base="baseDetectionsSearch">
+          <query>
+$tab_scheduling_token$
+| eval category=if(match('action.correlationsearch.enabled', "1|[Tt]|[Tt][Rr][Uu][Ee]") , "Correlation Search", if(isnull(alert_threshold) OR alert_threshold == "", "Scheduled Search", "Alert"))
+| where disabled = 0 AND is_scheduled = 1 AND $tokSearchCategory$
+| eval _time = strptime(next_scheduled_time, "%Y-%m-%d %H:%M:%S %Z")
+| timechart cont=false span=30s count as "Scheduled Searches" by category</query>
+        </search>
         <search base="baseDetectionsSearch" type="annotation">
           <query>
 $tab_scheduling_token$
@@ -616,14 +740,6 @@ $tab_scheduling_token$
 | eval annotation_label = "High number of total searches: " + count
 | eval annotation_category = "Warning"
           </query>
-        </search>
-        <search base="baseDetectionsSearch">
-          <query>
-$tab_scheduling_token$
-| eval category=if(match('action.correlationsearch.enabled', "1|[Tt]|[Tt][Rr][Uu][Ee]") , "Correlation Search", if(isnull(alert_threshold) OR alert_threshold == "", "Scheduled Search", "Alert"))
-| where disabled = 0 AND is_scheduled = 1 AND $tokSearchCategory$
-| eval _time = strptime(next_scheduled_time, "%Y-%m-%d %H:%M:%S %Z")
-| timechart cont=false span=30s count as "Scheduled Searches" by category</query>
         </search>
         <option name="charting.annotation.categoryColors">{"Warning":"#f96600"}</option>
         <option name="charting.chart">column</option>
